--- a/themes/greatermedia/assets/css/sass/components/_ads.scss
+++ b/themes/greatermedia/assets/css/sass/components/_ads.scss
@@ -136,19 +136,22 @@ category: Components - Ads
 }
 
 .ad__wallpaper {
+	bottom: 0;
 	height: 100%;
-	min-height: 1200px;
-	position: absolute;
+	left: 0;
+	position: fixed;
+	right: 0;
+	top: 0;
 	width: 100%;
 
+	// The below targets the DFP ad, and overrides any inline height/width values.
 	> div,
 	> div > div,
 	> div > div > iframe {
 		bottom: 0;
 		height: 100% !important;
 		left: 0;
-		min-height: 1200px;
-		position: absolute;
+		position: fixed;
 		right: 0;
 		top: 0;
 		width: 100% !important;
